--- a/interface/rpinterface.glade
+++ b/interface/rpinterface.glade
@@ -4,7 +4,7 @@
   <!-- interface-naming-policy project-wide -->
   <widget class="GtkWindow" id="MainWindow">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Hello World...</property>
+    <property name="title" translatable="yes">Remote-Player</property>
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
